Rollouts/services-vishva.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-canary
  namespace: vishva
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: rollouts-vishva

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-stable
  namespace: vishva
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: rollouts-vishva
